refactored project space manager and middleware project classed to prepare for project space swap